[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wickhunter"
version = "0.1.0"
description = "Project WickHunter event-driven trading system scaffold"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "WickHunter Team" }]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
